Add some translations

--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -1,4 +1,25 @@
 ;
+; Allgemeine Funktionen
+;
+
+Book Bag = Merkliste
+Add to Book Bag = Zur Merkliste hinzufügen
+Remove from Book Bag = Aus Merkliste entfernen
+
+Restrict to E-resources = Einschränken auf E-Medien
+
+Contact = Kontakt
+Terms of Service = Nutzungsbedingungen
+Accessibility = Barrierefreiheit
+Privacy = Datenschutz
+Legal Notice = Impressum
+
+Provided by = Ein Angebot von
+Partner = Partner
+Sponsored by = Gefördert von
+Staff View = Internformat
+
+;
 ; Sprachen und Sprachcodes
 ;
 
