--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -205,3 +205,4 @@ Summary = Zusammenfassung
 Title = Titel
 Title Variant = Abweichender Titel
 Work Title = Werktitel
+Other Classifications = Weitere Klassifikationen
