Add HTML page title translation

--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -19,6 +19,8 @@ Partner = Partner
 Sponsored by = Gefördert von
 Staff View = Internformat
 
+title_wrapper = "%%pageTitle%%"
+
 ;
 ; Sprachen und Sprachcodes
 ;
