Add search field translations

--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -23,6 +23,12 @@ Detail = Details
 
 title_wrapper = "%%pageTitle%%"
 
+; Suchfelder
+
+AllFields = Alle Felder
+Numbers = Nummern
+ISN = ISBN/ISSN
+
 ;
 ; Sprachen und Sprachcodes
 ;
