--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -4,6 +4,12 @@
 
 title_wrapper = "%%pageTitle%%"
 
+; Suchfelder
+
+AllFields = All Fields
+Numbers = Numbers
+ISN = ISBN/ISSN
+
 ;
 ; Sprachen und Sprachcodes
 ;
