Add search field translation

--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -9,6 +9,7 @@ title_wrapper = "%%pageTitle%%"
 AllFields = All Fields
 Numbers = Numbers
 ISN = ISBN/ISSN
+BK = Basic Classification
 
 ;
 ; Sprachen und Sprachcodes
