Add search field translation

--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -28,6 +28,8 @@ title_wrapper = "%%pageTitle%%"
 AllFields = Alle Felder
 Numbers = Nummern
 ISN = ISBN/ISSN
+BK = Basisklassifikation
+Class = Systematik
 
 ;
 ; Sprachen und Sprachcodes
