--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -10,6 +10,7 @@ AllFields = All Fields
 Numbers = Numbers
 ISN = ISBN/ISSN
 BK = Basic Classification
+Class = Classification
 
 ;
 ; Sprachen und Sprachcodes
