--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -23,6 +23,8 @@ Detail = Details
 
 title_wrapper = "%%pageTitle%%"
 
+Existing issues/volumes = Vorhandene Hefte/Bände
+
 ; Suchfelder
 
 AllFields = Alle Felder
