Add english translations

--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -2,7 +2,28 @@
 ; Allgemeine Funktionen
 ;
 
+Book Bag = Book Bag
+Add to Book Bag = Add to Book Bag
+Remove from Book Bag = Remove from Book Bag
+
+Restrict to E-resources = Restrict to E-resources
+
+Contact = Contact
+Terms of Service = Terms of Service
+Accessibility = Accessibility
+Privacy = Privacy
+Legal Notice = Legal Notice
+
+Provided by = Provided by
+Partner = Partner
+Sponsored by = Sponsored by
+Staff View = Staff View
+
+Detail = Details
+
 title_wrapper = "%%pageTitle%%"
+
+Existing issues/volumes = Existing issues/volumes
 
 ; Suchfelder
 
@@ -11,6 +32,7 @@ Numbers = Numbers
 ISN = ISBN/ISSN
 BK = Basic Classification
 Class = Classification
+Title = Title
 
 ;
 ; Sprachen und Sprachcodes
