Add metadata field translation

--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -158,6 +158,7 @@ Containing Work = Containing Work
 Corporate Bodies = Corporate Bodies
 Data Source = Data Source
 Edition = Edition
+Form Note = Form Note
 ISBN = ISBN
 ISSN = ISSN
 Identifier = Identifier
