Fix typo in translation

--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -175,6 +175,6 @@ RVK = RVK
 Series = Series
 Succeeding Title = Succeeding Title
 Summary = Summary
-Title = Titel
+Title = Title
 Title Variant = Title Variant
 Work Title = Work Title
