--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -17,13 +17,18 @@ Legal Notice = Impressum
 Provided by = Ein Angebot von
 Partner = Partner
 Sponsored by = Gefördert von
-Staff View = Internformat
+Staff View = Interne Anzeige
+
+Show more = Mehr anzeigen
 
 Detail = Details
 
 title_wrapper = "%%pageTitle%%"
 
 Existing issues/volumes = Vorhandene Hefte/Bände
+
+Export = Exportieren
+Back = Zurück
 
 ; Suchfelder
 
@@ -198,7 +203,7 @@ Congresses = Kongresse
 Containing Work = Übergeordnetes Werk
 Corporate Bodies = Körperschaften
 Data Source = Datenquelle
-Edition = Edition
+Edition = Ausgabe
 Extent = Umfang
 Form Note = Formangabe
 ISBN = ISBN
@@ -210,6 +215,7 @@ Language = Sprache
 Links = Links
 Media Type = Medientyp
 Note = Anmerkung
+Other Classifications = Weitere Klassifikationen
 Persons = Personen
 Preceding Title = Vorheriger Titel
 Published = Erschienen
@@ -220,4 +226,3 @@ Summary = Zusammenfassung
 Title = Titel
 Title Variant = Abweichender Titel
 Work Title = Werktitel
-Other Classifications = Weitere Klassifikationen
