--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -19,11 +19,16 @@ Partner = Partner
 Sponsored by = Sponsored by
 Staff View = Staff View
 
+Show more = Show more
+
 Detail = Details
 
 title_wrapper = "%%pageTitle%%"
 
 Existing issues/volumes = Existing issues/volumes
+
+Export = Export
+Back = Back
 
 ; Suchfelder
 
@@ -158,6 +163,7 @@ Containing Work = Containing Work
 Corporate Bodies = Corporate Bodies
 Data Source = Data Source
 Edition = Edition
+Extent = Extent
 Form Note = Form Note
 ISBN = ISBN
 ISSN = ISSN
@@ -168,6 +174,7 @@ Language = Language
 Links = Links
 Media Type = Media Type
 Note = Note
+Other Classifications = Other Classifications
 Persons = Persons
 Preceding Title = Preceding Title
 Published = Published
