--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -17,9 +17,10 @@ Legal Notice = Impressum
 Provided by = Ein Angebot von
 Partner = Partner
 Sponsored by = Gefördert von
-Staff View = Interne Anzeige
+Staff view = Interne Anzeige
 
 Show more = Mehr anzeigen
+Show less = Weniger anzeigen
 
 Detail = Details
 
