--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -17,9 +17,10 @@ Legal Notice = Legal Notice
 Provided by = Provided by
 Partner = Partner
 Sponsored by = Sponsored by
-Staff View = Staff View
+Staff view = Staff View
 
 Show more = Show more
+Show less = Show less
 
 Detail = Details
 
