--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -31,6 +31,8 @@ Existing issues/volumes = Vorhandene Hefte/Bände
 Export = Exportieren
 Back = Zurück
 
+Author = Verfasser:in
+
 ; Suchfelder
 
 AllFields = Alle Felder
