--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -31,6 +31,8 @@ Existing issues/volumes = Existing issues/volumes
 Export = Export
 Back = Back
 
+Author = Author
+
 ; Suchfelder
 
 AllFields = All Fields
