--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -219,6 +219,7 @@ Links = Links
 Media Type = Medientyp
 Note = Anmerkung
 Other Classifications = Weitere Klassifikationen
+Other Keywords = Weitere Schlagwörter
 Persons = Personen
 Preceding Title = Vorheriger Titel
 Published = Erschienen
