--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -178,6 +178,7 @@ Links = Links
 Media Type = Media Type
 Note = Note
 Other Classifications = Other Classifications
+Other Keywords = Other Keywords
 Persons = Persons
 Preceding Title = Preceding Title
 Published = Published
