Add translation for "Series"

--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -41,6 +41,7 @@ ISN = ISBN/ISSN
 BK = Basisklassifikation
 Class = Systematik
 Title = Titel
+Series = "Zeitschrift/Reihe"
 
 ;
 ; Sprachen und Sprachcodes
