--- a/src/main/resources/i18n/en.ini
+++ b/src/main/resources/i18n/en.ini
@@ -41,6 +41,7 @@ ISN = ISBN/ISSN
 BK = Basic Classification
 Class = Classification
 Title = Title
+Series = Series
 
 ;
 ; Sprachen und Sprachcodes
