--- a/src/main/resources/i18n/de.ini
+++ b/src/main/resources/i18n/de.ini
@@ -225,7 +225,7 @@ Persons = Personen
 Preceding Title = Vorheriger Titel
 Published = Erschienen
 RVK = RVK
-Series = Reihe
+Series = "Zeitschrift/Reihe"
 Succeeding Title = Nachfolgender Titel
 Summary = Zusammenfassung
 Title = Titel
